objects/modigie__Modigie_Credit__c.object
<CustomObject>
    <fields>
        <fullName>modigie__Date_Last_Synced__c</fullName>
        <description>Date field that holds last sync with modigie API</description>
        <label>Date Last Synced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>modigie__Purchased__c</fullName>
        <label>Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Remaining_Credits__c</fullName>
        <label>Remaining Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Remaining__c</fullName>
        <formula>modigie__Remaining_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Reserved__c</fullName>
        <label>Reserved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Used__c</fullName>
        <label>Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>modigie__Validation_Key__c</fullName>
        <label>Validation Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Modigie Credit</label>
    <listViews>
        <fullName>modigie__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MDGCRED-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modigie Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>